[tool.poetry]
name = "cart"
version = "0.1.0"
description = "Cart managment microservice"
authors = ["khalil SAIDANE"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.62.0"
uvicorn = "^0.12.3"
SQLAlchemy = "^1.3.20"
requests = "^2.25.0"
alembic = "^1.4.3"
databases = "^0.4.1"
fastapi-utils = "^0.2.1"
PyMySQL = "^0.10.1"
pydantic = "^1.7.3"
email-validator = "^1.1.2"
pytest = "^6.1.2"
mysqlclient = "^2.0.1"
vcrpy = "^4.1.1"
SQLAlchemy-Utils = "^0.36.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
